--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.8",
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
