--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@mui/icons-material": "^7.0.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.0",
     "@shadcn/ui": "^0.0.4",
     "@testing-library/dom": "^10.4.0",
